@@ -1,3 +1,7 @@
+2007-02-27  Matthew Grooms  <mgrooms@shrew.net>
+	* src/racoon/ipsec_doi.c: add logic to match ip address ids to
+	  ip subnet ids when appropriate. reported by Yvan.
+
 2007-02-21  Yvan Vanhullebus  <vanhu@netasq.com>
 	* src/racoon/ipsec_doi.c: block variable declaration before code
 	  in ipsecdoi_id2str().
